# kedgeree

./: .gitignore  LICENSE  README.md  fourmolu.yaml  kedgeree.cabal
.github/workflows/: pages.yml
app/: Main.hs
assets/: kedgeree-source.css  kedgeree-tokens.css  kedgeree.css  kedgeree.js
example/: build-demo.sh  build-site.sh  haddock-project-demo.sh  landing-demo.sh  screenshot.sh  stress.sh
example/src/: Geometry.hs  Showcase.hs
example/src/Geometry/: Render.hs
src/Kedgeree/: Assets.hs  Process.hs  Rewrite.hs  Sidebar.hs
